syntax = "proto3";

package notepad;

option go_package = "irs.notepad.v1;ssov1";

service Notepad {
    rpc Set(SetRequest) returns (SetResponse);
    rpc GetOne(GetOneRequest) returns (GetOneResponse);
    rpc GetAll(GetAllRequest) returns (GetAllResponse);
    rpc IsOwner(IsOwnerRequest) returns (IsOwnerResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message SetRequest {
    int64 owner_id       = 1;
    string title         = 2;
    string content       = 3;
    repeated string tags = 4;
}

message SetResponse {
    int64 article_id = 1;
}

message GetOneRequest {
    int64 article_id = 1;
}

message GetOneResponse {
    bool exists = 1;
}

message GetAllRequest {
    string owner_id = 1;
}

message GetAllResponse {
    bool exists = 1;
}

message IsOwnerRequest {
    string owner_id = 1;
}

message IsOwnerResponse {
    bool is_owner = 1;
}

message DeleteRequest {
    int64 article_id = 1;
}

message DeleteResponse {
    string status = 1;
}